# athena-migrator

./: README.md  lambda.py  pyproject.toml
athena_migrator/: athena_client.py  config.py  migrations.py  migrator.py
data/scripts/: 202206211901-create-db-refined.hql  202206211935-create-table-test.hql
tests/: test_migrations.py  test_migrator.py
