[tool.poetry]
name = "athena-migrator"
version = "0.1.0"
description = ""
authors = ["Adrian Abreu <adrianabreugonzalez@outlook.com>"]
include = ["data/"]
[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.17.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
moto = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
